# unfolding-mesh

./: CMakeLists.txt  Makefile  README.md  README.txt  bumpy-528.off  bunny-128.off  bunny-348.off  cat-702.off  chess-496.off  common.h  craft.cpp  dragon-344.off  dual.cpp  feature.cpp  fish-950.off  gear-508.off  gene.cpp  gene.h  icosa-020.off  kitten-122.off  luigi-356.off  main.cpp  mannequin-1376.off  mario-420.off  matching.cpp  meshui.cpp  moneybox-128.off  moneybox-196.off  moneybox-392.off  mst.cpp  octa-008.off  pooh-392.off  project.cpp  random.cpp  random.h  render.cpp  scan.h  seagull-462.off  search.cpp  shark-248.skl  (+17 more)
